# studious-train

./: .gitignore  Readme.md  azure-pipelines.yml
backend/: Dockerfile  Readme.md  pyproject.toml
backend/metadata/: ddl.sql
backend/src/: __init__.py  __main__.py  conftest.py  logging.py  settings.py  tkq.py
backend/src/app/: __init__.py  application.py  lifetime.py
backend/src/app/api/: __init__.py  router.py
backend/src/app/api/auth/: utils.py  view.py
backend/src/app/api/books/: azure_helper.py  ollama_summarization.py  schema.py  views.py
backend/src/app/api/reviews/: schema.py  views.py
backend/src/app/midddlewares/: __init__.py  auth_middleware.py  exception.py
backend/src/app/utils/: __init__.py  abort.py  exceptions.py
backend/src/config/: config.py
backend/src/db/: base.py  connection.py  test.py  utils.py
backend/src/db/models/: __init__.py  books.py  reviews.py  user.py
genai/: TextSummarization_Llama3.ipynb  ollama_test.ipynb  requirements.txt
ml/: .gitignore  book_recommendation.ipynb  generate_data.ipynb  recommendation_llm_tried.ipynb  requirements.txt
ml/data/: book_data.csv  books.csv
